deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: $NAME_SPACE
spec:
  progressDeadlineSeconds: 600
  replicas: $REPLICAS
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: $APP_NAME
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:$TAG_NAME-$BUILD_NUMBER
          imagePullPolicy: Always
          name: $APP_NAME
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "30Mi"
              cpu: "50m"
            limits:
              memory: "300Mi"
              cpu: "100m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
      imagePullSecrets:
        - name: comingweb3-registry-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
  namespace: $NAME_SPACE
spec:
  type: ClusterIP
  selector:
    app: $APP_NAME
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: $HOST_NAME
  namespace: $NAME_SPACE
  annotations:
    kubesphere.io/creator: admin
spec:
  rules:
    - host: $HOST_NAME
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: $APP_NAME
                port:
                  number: 8080
